# marketdata-py

./: README.md  pyproject.toml
src/marketdata/: kraken.py  main.py  parquet.py
