[project]
name = "marketdata-py"
version = "0.1.0"
description = "market data in polars and parquet"
authors = [
    {name = "shawlynot",email = "88781957+shawlynot@users.noreply.github.com"}
]
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
]

[tool.poetry]

[tool.poetry.group.dev.dependencies]
mypy = "^1.16.1"

[build-system]
requires = ["poetry-core>=2.0.0,<3.0.0"]
build-backend = "poetry.core.masonry.api"
